<resources>
	<string name="app_name">श्रीमद्भगवद्गीता</string>
	<string name="geeta_title_00">अर्जुनविषादयोगः</string>
	<string name="geeta_00">
		"श्री गणेशाय नमः ॥\n"
		"\n"
		"अथ ध्यानम् ।\n"
		"ॐ पार्थाय प्रतिबोधितां भगवता नारायणेन स्वयं\n"
		"व्यासेन ग्रथितां पुराणमुनिना मध्ये महाभारतम् ।\n"
		"अद्वैतामृतवर्षिणीं भगवतीमष्टादशाध्यायिनीं\n"
		"अम्ब त्वामनुसन्दधामि भगवद्गीते भवेद्वेषिणीम् ॥१॥\n"
		"\n"
		"नमोऽस्तु ते व्यास विशालबुद्धे फुल्लारविन्दायतपत्रनेत्र ।\n"
		"येन त्वया भारततैलपूर्णः प्रज्वालितो ज्ञानमयः प्रदीपः ॥२॥\n"
		"\n"
		"प्रपन्नपारिजातायतोत्रवेत्रैकपाणये ।\n"
		"ज्ञानमुद्राय कृष्णाय गीतामृतदुहे नमः ॥३॥\n"
		"\n"
		"सर्वोपनिषदो गावो दोग्धा गोपाल नन्दनः ।\n"
		"पार्थो वत्सः सुधीर्भोक्ता दुग्धं गीतामृतं महत् ॥४॥\n"
		"\n"
		"वसुदेवसुतं देवं कंसचाणूरमर्दनम् ।\n"
		"देवकीपरमानन्दं कृष्णं वन्दे जगद्गुरुम् ॥५॥\n"
		"\n"
		"भीष्मद्रोणतटा जयद्रथजला गान्धारनीलोत्पला\n"
		"शल्यग्राहवती कृपेण वहनी कर्णेन वेलाकुला ।\n"
		"अश्वत्थामविकर्णघोरमकरा दुर्योधनावर्तिनी\n"
		"सोत्तीर्णा खलु पाण्डवै रणनदी कैवर्तकः केशवः ॥६॥\n"
		"\n"
		"पाराशर्यवचः सरोजममलं गीतार्थगन्धोत्कटं\n"
		"नानाख्यानककेसरं हरिकथासम्बोधनाबोधितम् ।\n"
		"लोके सज्जनषट्पदैरहरहः पेपीयमानं मुदा\n"
		"भूयाद्भारतपङ्कजं कलिमलप्रध्वंसि नः श्रेयसे ॥७॥\n"
		"\n"
		"मूकं करोति वाचालं पङ्गुं लङ्घयते गिरिम् ।\n"
		"यत्कृपा तमहं वन्दे परमानन्दमाधवम् ॥८॥\n"
		"\n"
		"यं ब्रह्मा वरुणेन्द्ररुद्रमरुतः स्तुन्वन्ति दिव्यैः स्तवैः\n"
		"वेदैः साङ्गपदक्रमोपनिषदैर्गायन्ति यं सामगाः ।\n"
		"ध्यानावस्थिततद्गतेन मनसा पश्यन्ति यं योगिनो\n"
		"यस्यान्तं न विदुः सुरासुरगणा देवाय तस्मै नमः ॥९॥\n"

	</string>
	<string name="geeta_title_01">अर्जुनविषादयोगः</string>
	<string name="geeta_01">
		"॥ ॐ श्री परमात्मने नमः ॥\n"
		"॥ अथ श्रीमद्भगवद्गीता ॥\n"
		"अथ प्रथमोऽध्यायः । अर्जुनविषादयोगः\n"
		"\n"
		"धृतराष्ट्र उवाच ।\n"
		"\n"
		"धर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः ।\n"
		"मामकाः पाण्डवाश्चैव किमकुर्वत सञ्जय ॥ १-१॥\n"
		"\n"
		"सञ्जय उवाच ।\n"
		"\n"
		"दृष्ट्वा तु पाण्डवानीकं व्यूढं दुर्योधनस्तदा ।\n"
		"आचार्यमुपसङ्गम्य राजा वचनमब्रवीत् ॥ १-२॥\n"
		"\n"
		"पश्यैतां पाण्डुपुत्राणामाचार्य महतीं चमूम् ।\n"
		"व्यूढां द्रुपदपुत्रेण तव शिष्येण धीमता ॥ १-३॥\n"
		"\n"
		"अत्र शूरा महेष्वासा भीमार्जुनसमा युधि ।\n"
		"युयुधानो विराटश्च द्रुपदश्च महारथः ॥ १-४॥\n"
		"\n"
		"धृष्टकेतुश्चेकितानः काशिराजश्च वीर्यवान् ।\n"
		"पुरुजित्कुन्तिभोजश्च शैब्यश्च नरपुङ्गवः ॥ १-५॥\n"
		"\n"
		"युधामन्युश्च विक्रान्त उत्तमौजाश्च वीर्यवान् ।\n"
		"सौभद्रो द्रौपदेयाश्च सर्व एव महारथाः ॥ १-६॥\n"
		"\n"
		"अस्माकं तु विशिष्टा ये तान्निबोध द्विजोत्तम ।\n"
		"नायका मम सैन्यस्य संज्ञार्थं तान्ब्रवीमि ते ॥ १-७॥\n"
		"\n"
		"भवान्भीष्मश्च कर्णश्च कृपश्च समितिञ्जयः ।\n"
		"अश्वत्थामा विकर्णश्च सौमदत्तिस्तथैव च ॥ १-८॥\n"
		"\n"
		"अन्ये च बहवः शूरा मदर्थे त्यक्तजीविताः ।\n"
		"नानाशस्त्रप्रहरणाः सर्वे युद्धविशारदाः ॥ १-९॥\n"
		"\n"
		"अपर्याप्तं तदस्माकं बलं भीष्माभिरक्षितम् ।\n"
		"पर्याप्तं त्विदमेतेषां बलं भीमाभिरक्षितम् ॥ १-१०॥\n"
		"\n"
		"अयनेषु च सर्वेषु यथाभागमवस्थिताः ।\n"
		"भीष्ममेवाभिरक्षन्तु भवन्तः सर्व एव हि ॥ १-११॥\n"
		"\n"
		"तस्य सञ्जनयन्हर्षं कुरुवृद्धः पितामहः ।\n"
		"सिंहनादं विनद्योच्चैः शङ्खं दध्मौ प्रतापवान् ॥ १-१२॥\n"
		"\n"
		"ततः शङ्खाश्च भेर्यश्च पणवानकगोमुखाः ।\n"
		"सहसैवाभ्यहन्यन्त स शब्दस्तुमुलोऽभवत् ॥ १-१३॥\n"
		"\n"
		"ततः श्वेतैर्हयैर्युक्ते महति स्यन्दने स्थितौ ।\n"
		"माधवः पाण्डवश्चैव दिव्यौ शङ्खौ प्रदध्मतुः ॥ १-१४॥\n"
		"\n"
		"पाञ्चजन्यं हृषीकेशो देवदत्तं धनञ्जयः ।\n"
		"पौण्ड्रं दध्मौ महाशङ्खं भीमकर्मा वृकोदरः ॥ १-१५॥\n"
		"\n"
		"अनन्तविजयं राजा कुन्तीपुत्रो युधिष्ठिरः ।\n"
		"नकुलः सहदेवश्च सुघोषमणिपुष्पकौ ॥ १-१६॥\n"
		"\n"
		"काश्यश्च परमेष्वासः शिखण्डी च महारथः ।\n"
		"धृष्टद्युम्नो विराटश्च सात्यकिश्चापराजितः ॥ १-१७॥\n"
		"\n"
		"द्रुपदो द्रौपदेयाश्च सर्वशः पृथिवीपते ।\n"
		"सौभद्रश्च महाबाहुः शङ्खान्दध्मुः पृथक्पृथक् ॥ १-१८॥\n"
		"\n"
		"स घोषो धार्तराष्ट्राणां हृदयानि व्यदारयत् ।\n"
		"नभश्च पृथिवीं चैव तुमुलोऽभ्यनुनादयन् ॥ १-१९॥ orलो व्यनु\n"
		"\n"
		"अथ व्यवस्थितान्दृष्ट्वा धार्तराष्ट्रान् कपिध्वजः ।\n"
		"प्रवृत्ते शस्त्रसम्पाते धनुरुद्यम्य पाण्डवः ॥ १-२०॥\n"
		"\n"
		"हृषीकेशं तदा वाक्यमिदमाह महीपते ।\n"
		"\n"
		"अर्जुन उवाच ।\n"
		"\n"
		"सेनयोरुभयोर्मध्ये रथं स्थापय मेऽच्युत ॥ १-२१॥\n"
		"\n"
		"यावदेतान्निरीक्षेऽहं योद्धुकामानवस्थितान् ।\n"
		"कैर्मया सह योद्धव्यमस्मिन् रणसमुद्यमे ॥ १-२२॥\n"
		"\n"
		"योत्स्यमानानवेक्षेऽहं य एतेऽत्र समागताः ।\n"
		"धार्तराष्ट्रस्य दुर्बुद्धेर्युद्धे प्रियचिकीर्षवः ॥ १-२३॥\n"
		"\n"
		"सञ्जय उवाच ।\n"
		"\n"
		"एवमुक्तो हृषीकेशो गुडाकेशेन भारत ।\n"
		"सेनयोरुभयोर्मध्ये स्थापयित्वा रथोत्तमम् ॥ १-२४॥\n"
		"\n"
		"भीष्मद्रोणप्रमुखतः सर्वेषां च महीक्षिताम् ।\n"
		"उवाच पार्थ पश्यैतान्समवेतान्कुरूनिति ॥ १-२५॥\n"
		"\n"
		"तत्रापश्यत्स्थितान्पार्थः पितॄनथ पितामहान् ।\n"
		"आचार्यान्मातुलान्भ्रातॄन्पुत्रान्पौत्रान्सखींस्तथा ॥ १-२६॥\n"
		"\n"
		"श्वशुरान्सुहृदश्चैव सेनयोरुभयोरपि ।\n"
		"तान्समीक्ष्य स कौन्तेयः सर्वान्बन्धूनवस्थितान् ॥ १-२७॥\n"
		"\n"
		"कृपया परयाविष्टो विषीदन्निदमब्रवीत् ।\n"
		"\n"
		"अर्जुन उवाच ।\n"
		"\n"
		"दृष्ट्वेमं स्वजनं कृष्ण युयुत्सुं समुपस्थितम् ॥ १-२८॥\n"
		"\n"
		"सीदन्ति मम गात्राणि मुखं च परिशुष्यति ।\n"
		"वेपथुश्च शरीरे मे रोमहर्षश्च जायते ॥ १-२९॥\n"
		"\n"
		"गाण्डीवं स्रंसते हस्तात्त्वक्चैव परिदह्यते ।\n"
		"न च शक्नोम्यवस्थातुं भ्रमतीव च मे मनः ॥ १-३०॥\n"
		"\n"
		"निमित्तानि च पश्यामि विपरीतानि केशव ।\n"
		"न च श्रेयोऽनुपश्यामि हत्वा स्वजनमाहवे ॥ १-३१॥\n"
		"\n"
		"न काङ्क्षे विजयं कृष्ण न च राज्यं सुखानि च ।\n"
		"किं नो राज्येन गोविन्द किं भोगैर्जीवितेन वा ॥ १-३२॥\n"
		"\n"
		"येषामर्थे काङ्क्षितं नो राज्यं भोगाः सुखानि च ।\n"
		"त इमेऽवस्थिता युद्धे प्राणांस्त्यक्त्वा धनानि च ॥ १-३३॥\n"
		"\n"
		"आचार्याः पितरः पुत्रास्तथैव च पितामहाः ।\n"
		"मातुलाः श्वशुराः पौत्राः श्यालाः सम्बन्धिनस्तथा ॥ १-३४॥\n"
		"\n"
		"एतान्न हन्तुमिच्छामि घ्नतोऽपि मधुसूदन ।\n"
		"अपि त्रैलोक्यराज्यस्य हेतोः किं नु महीकृते ॥ १-३५॥\n"
		"\n"
		"निहत्य धार्तराष्ट्रान्नः का प्रीतिः स्याज्जनार्दन ।\n"
		"पापमेवाश्रयेदस्मान्हत्वैतानाततायिनः ॥ १-३६॥\n"
		"\n"
		"तस्मान्नार्हा वयं हन्तुं धार्तराष्ट्रान्स्वबान्धवान् ।\n"
		"स्वजनं हि कथं हत्वा सुखिनः स्याम माधव ॥ १-३७॥\n"
		"\n"
		"यद्यप्येते न पश्यन्ति लोभोपहतचेतसः ।\n"
		"कुलक्षयकृतं दोषं मित्रद्रोहे च पातकम् ॥ १-३८॥\n"
		"\n"
		"कथं न ज्ञेयमस्माभिः पापादस्मान्निवर्तितुम् ।\n"
		"कुलक्षयकृतं दोषं प्रपश्यद्भिर्जनार्दन ॥ १-३९॥\n"
		"\n"
		"कुलक्षये प्रणश्यन्ति कुलधर्माः सनातनाः ।\n"
		"धर्मे नष्टे कुलं कृत्स्नमधर्मोऽभिभवत्युत ॥ १-४०॥\n"
		"\n"
		"अधर्माभिभवात्कृष्ण प्रदुष्यन्ति कुलस्त्रियः ।\n"
		"स्त्रीषु दुष्टासु वार्ष्णेय जायते वर्णसङ्करः ॥ १-४१॥\n"
		"\n"
		"सङ्करो नरकायैव कुलघ्नानां कुलस्य च ।\n"
		"पतन्ति पितरो ह्येषां लुप्तपिण्डोदकक्रियाः ॥ १-४२॥\n"
		"\n"
		"दोषैरेतैः कुलघ्नानां वर्णसङ्करकारकैः ।\n"
		"उत्साद्यन्ते जातिधर्माः कुलधर्माश्च शाश्वताः ॥ १-४३॥\n"
		"\n"
		"उत्सन्नकुलधर्माणां मनुष्याणां जनार्दन ।\n"
		"नरके नियतं वासो भवतीत्यनुशुश्रुम ॥ १-४४॥orनरकेऽनियतं\n"
		"\n"
		"अहो बत महत्पापं कर्तुं व्यवसिता वयम् ।\n"
		"यद्राज्यसुखलोभेन हन्तुं स्वजनमुद्यताः ॥ १-४५॥\n"
		"\n"
		"यदि मामप्रतीकारमशस्त्रं शस्त्रपाणयः ।\n"
		"धार्तराष्ट्रा रणे हन्युस्तन्मे क्षेमतरं भवेत् ॥ १-४६॥\n"
		"\n"
		"सञ्जय उवाच ।\n"
		"\n"
		"एवमुक्त्वार्जुनः सङ्ख्ये रथोपस्थ उपाविशत् ।\n"
		"विसृज्य सशरं चापं शोकसंविग्नमानसः ॥ १-४७॥\n"
		"\n"
		"ॐ तत्सदिति श्रीमद्भगवद्गीतासूपनिषत्सु\n"
		"ब्रह्मविद्यायां योगशास्त्रे श्रीकृष्णार्जुनसंवादे\n"
		"अर्जुनविषादयोगो नाम प्रथमोऽध्यायः ॥ १॥\n"
		"\n"
	</string>
	<string name="geeta_title_02">साङ्ख्ययोगः</string>
	<string name="geeta_title_03">कर्मयोगः</string>
	<string name="geeta_title_05">संन्यासयोगः</string>
	<string name="geeta_title_06">आत्मसंयमयोगः</string>
	<string name="geeta_title_07">ज्ञानविज्ञानयोगः</string>
	<string name="geeta_title_08">अक्षरब्रह्मयोगः</string>
	<string name="geeta_title_09">राजविद्याराजगुह्ययोगः</string>
	<string name="geeta_title_10">विभूतियोगः</string>
	<string name="geeta_title_11">विश्वरूपदर्शनयोगः</string>
	<string name="geeta_title_12">भक्तियोगः</string>
	<string name="geeta_title_13">क्षेत्रक्षेत्रज्ञविभागयोगः</string>
	<string name="geeta_title_14">गुणत्रयविभागयोगः</string>
	<string name="geeta_title_15">पुरुषोत्तमयोगः</string>
	<string name="geeta_title_16">दैवासुरसम्पद्विभागयोगः</string>
	<string name="geeta_title_17">श्रद्धात्रयविभागयोगः</string>
	<string name="geeta_title_18">मोक्षसंन्यासयोगः</string>
	<string name="geeta_title_19">गीतामाहात्म्यं</string>
</resources>