<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/geeta_title_00"
			android:title="@string/geeta_title_00" />
		<item
			android:id="@+id/geeta_title_01"
			android:title="@string/geeta_title_01" />
		<item
			android:id="@+id/geeta_title_02"
			android:title="@string/geeta_title_02" />
		<item
			android:id="@+id/geeta_title_03"
			android:title="@string/geeta_title_03" />
		<item
			android:id="@+id/geeta_title_04"
			android:title="@string/geeta_title_04" />
		<item
			android:id="@+id/geeta_title_05"
			android:title="@string/geeta_title_05" />
		<item
			android:id="@+id/geeta_title_06"
			android:title="@string/geeta_title_06" />
		<item
			android:id="@+id/geeta_title_07"
			android:title="@string/geeta_title_07" />
		<item
			android:id="@+id/geeta_title_08"
			android:title="@string/geeta_title_08" />
		<item
			android:id="@+id/geeta_title_09"
			android:title="@string/geeta_title_09" />
		<item
			android:id="@+id/geeta_title_10"
			android:title="@string/geeta_title_10" />
		<item
			android:id="@+id/geeta_title_11"
			android:title="@string/geeta_title_11" />
		<item
			android:id="@+id/geeta_title_12"
			android:title="@string/geeta_title_12" />
		<item
			android:id="@+id/geeta_title_13"
			android:title="@string/geeta_title_13" />
		<item
			android:id="@+id/geeta_title_14"
			android:title="@string/geeta_title_14" />
		<item
			android:id="@+id/geeta_title_15"
			android:title="@string/geeta_title_15" />
		<item
			android:id="@+id/geeta_title_16"
			android:title="@string/geeta_title_16" />
		<item
			android:id="@+id/geeta_title_17"
			android:title="@string/geeta_title_17" />
		<item
			android:id="@+id/geeta_title_18"
			android:title="@string/geeta_title_18" />
		<item
			android:id="@+id/geeta_title_19"
			android:title="@string/geeta_title_19" />
	</group>


</menu>
